# lke-operator

./: .chainsaw.yaml  .dockerignore  .gitignore  CODEOWNERS  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  kustomization.yaml  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: changelog.yaml  commands.yaml  go.yaml  image-docs.yaml  image.yaml  linters-tests.yaml  linters.yaml  publish-docs.yaml  python.yaml
api/v1alpha1/: groupversion_info.go  lkeclusterconfig_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  lkeclusterconfig_editor_role.yaml  lkeclusterconfig_viewer_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
docs/: .crd-ref-docs.yaml  index.md
docs/reference/: out.md
hack/: boilerplate.go.txt  publish.py  release.py  report.py  tools.go
hack/utils/: __init__.py  logging.py
internal/controller/: common.go  lkeclusterconfig.go  lkeclusterconfig_controller.go  lkeclusterconfig_test.go
internal/errors/: errors.go
internal/k8s/: client.go
internal/lkeclient/: lkeclient.go
internal/version/: version.go
main/: 404.html  index.html
main/search/: search_index.json
test/00-minimal/: apply.yaml  assert.yaml  chainsaw-test.yaml
test/01-multiple-node-pools/: apply.yaml  assert.yaml  chainsaw-test.yaml
test/02-autoscaler/: apply.yaml  assert.yaml  chainsaw-test.yaml
v0.1/: index.html
(+18 files in other folders)
